@@ -12,6 +12,7 @@ int pec_index_found(int dev) {
 	char res[2];
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (tc_pass_through_cmd(dev, 1, _TC_AXIS_RA_AZM, 0x18, 0, 0, 0, 1, res) < 0) {
 		return RC_FAILED;
@@ -26,6 +27,7 @@ int pec_seek_index(int dev) {
 	char res;
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (tc_pass_through_cmd(dev, 1, _TC_AXIS_RA_AZM, 0x19, 0, 0, 0, 0, &res) < 0) {
 		return RC_FAILED;
@@ -39,6 +41,7 @@ int pec_record(int dev, char action) {
 	char res, cmd_id;
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (action == PEC_START) {
 		cmd_id = 0x0c;  /* Start PEC record */
@@ -60,6 +63,7 @@ int pec_record_complete(int dev) {
 	char res[2];
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (tc_pass_through_cmd(dev, 1, _TC_AXIS_RA_AZM, 0x15, 0, 0, 0, 1, res) < 0) {
 		return RC_FAILED;
@@ -74,6 +78,7 @@ int pec_playback(int dev, char action) {
 	char res;
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if ((action != PEC_START) && (action != PEC_STOP)) {
 		return RC_PARAMS;
@@ -91,6 +96,7 @@ int pec_get_playback_index(int dev) {
 	char res[2];
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (tc_pass_through_cmd(dev, 1, _TC_AXIS_RA_AZM, 0x0e, 0, 0, 0, 1, res) < 0) {
 		return RC_FAILED;
@@ -104,6 +110,7 @@ int pec_get_data_len(int dev) {
 	char res[2];
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (tc_pass_through_cmd(dev, 2, _TC_AXIS_RA_AZM, 0x30, 0x3f, 0, 0, 1, res) < 0) {
 		return RC_FAILED;
@@ -117,6 +124,7 @@ int _pec_set_data(int dev, unsigned char index, char data) {
 	char res;
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (tc_pass_through_cmd(dev, 4, _TC_AXIS_RA_AZM, 0x31, 0x40+index, data, 0, 0, &res) < 0) {
 		return RC_FAILED;
@@ -131,6 +139,7 @@ int _pec_get_data(int dev, unsigned char index) {
 	char res[2];
 
 	REQUIRE_VER(VER_AUX);
+	REQUIRE_VENDOR(VNDR_CELESTRON);
 
 	if (tc_pass_through_cmd(dev, 2, _TC_AXIS_RA_AZM, 0x30, 0x40+index, 0, 0, 1, res) < 0) {
 		return RC_FAILED;
