@@ -1,3 +1,9 @@
+Sun Jan 10 01:09:08 2016
+	- added full SkyWatcher support
+	- distinguish between SkyWatcher and Celestron
+	- new command tc_get_orientation();
+	- documentation fixes
+	- several new calls
 Sat Sep  5 03:38:23 2015 - 0.13
 	- Fix typo
 Sat Mar 29 15:45:07 2014 - 0.11
